--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "free-nextjs-admin-dashboard",
-  "version": "1.3.4",
+  "name": "airwatch-dashboard",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -15,6 +15,7 @@
     "next": "^14.2.4",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
+    "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18"
   },
   "devDependencies": {
