--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   },
   "dependencies": {
     "apexcharts": "^3.45.2",
+    "axios": "^1.7.7",
     "flatpickr": "^4.6.13",
+    "js-quadtree": "^3.3.6",
     "jsvectormap": "^1.6.0",
+    "leaflet": "^1.9.4",
+    "lodash": "^4.17.21",
     "next": "^14.2.4",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
     "react-bootstrap-icons": "^1.11.4",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
     "@types/node": "^20",
