--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsvectormap": "^1.6.0",
     "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "next": "^14.2.4",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
@@ -29,6 +30,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-leaflet": "^3.0.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
