--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
+    "mapbox-gl": "^3.6.0",
     "next": "^14.2.4",
+    "ol": "^10.1.0",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
     "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18",
-    "react-leaflet": "^4.2.1"
+    "react-leaflet": "^4.2.1",
+    "react-map-gl": "^7.1.7"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.12",
