--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "apexcharts": "^3.45.2",
     "axios": "^1.7.7",
     "flatpickr": "^4.6.13",
+    "framer-motion": "^11.5.4",
     "js-quadtree": "^3.3.6",
     "jsvectormap": "^1.6.0",
     "leaflet": "^1.9.4",
