--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-apexcharts": "^1.4.1",
     "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
     "react-map-gl": "^7.1.7"
   },
