--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "apexcharts": "^3.45.2",
     "axios": "^1.7.7",
+    "firebase": "^10.13.1",
     "flatpickr": "^4.6.13",
     "framer-motion": "^11.5.4",
     "js-quadtree": "^3.3.6",
@@ -27,7 +28,8 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
-    "react-map-gl": "^7.1.7"
+    "react-map-gl": "^7.1.7",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.12",
