--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
     "react-map-gl": "^7.1.7",
+    "react-router-dom": "^6.27.0",
     "react-toastify": "^10.0.5"
   },
   "devDependencies": {
